--- a/styles.css
+++ b/styles.css
@@ -98,6 +98,11 @@ input:checked+.slider:before {
     margin-bottom: 20px;
 }
 
+.card i {
+    /* margin-bottom: 10px; */
+    color: hsl(228, 96%, 53%);
+}
+
 .card {
     background-color: hsl(228, 28%, 20%);
     padding: 20px;
@@ -109,13 +114,29 @@ input:checked+.slider:before {
     box-sizing: border-box;
 }
 
-.card p {
-    margin: 10px 0;
+
+/* Align images with text */
+.card p,
+.overview-card p {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
+.card p img {
+    width: 20px;
+    height: 20px;
+}
+
+.card .change img {
+    width: 10px;
+    height: 10px;
 }
 
 .card h2 {
     margin: 0;
-    font-size: 2rem;
+    font-size: 3rem;
 }
 
 .change {
@@ -161,6 +182,9 @@ input:checked+.slider:before {
 }
 
 .overview-card {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     background-color: hsl(228, 28%, 20%);
     padding: 20px;
     border-radius: 5px;
